--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.ac.chiba_fjb.a.test0912">
+    package="jp.ac.chiba_fjb.a.sotsuken">
 
     <application
         android:allowBackup="true"
